--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
   <meta name="author" content="Rithish K.R">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet preload prefetch" as="style" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet preload prefetch" as="style" type="text/css">
 </head>
 <body class="mat-typography">
   <noscript>Please enable JavaScript in your browser !</noscript>
