updated main-content and added touch interaction to attractors

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Cache-Control" content="max-age=3153600"/>
-  <meta name="keywords" content="portfolio | portfolio website | canvas">
+  <meta name="keywords" content="portfolio, portfolio website, canvas">
   <meta name="description" content="My personal angular portfolio">
   <meta name="author" content="Rithish K.R">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet preload prefetch" as="style" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Parisienne&:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet preload prefetch" as="style" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet preload prefetch" as="style" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&:wght@300&display=swap" rel="stylesheet preload prefetch" as="style">
 </head>
 <body class="mat-typography">
   <noscript>Please enable JavaScript in your browser !</noscript>
